# swagger.yaml
@@ -2514,6 +2514,10 @@ definitions:
         type: string
         description: Json formatted string containing the user overrides for the initial ignition config
         example: '{"ignition": {"version": "3.1.0"}, "storage": {"files": [{"path": "/tmp/example", "contents": {"source": "data:text/plain;base64,aGVscGltdHJhcHBlZGluYXN3YWdnZXJzcGVj"}}]}}'
+      connectivity_majority_groups:
+        type: string
+        description: Json formatted string containing the majority groups for conectivity checks.
+        x-go-custom-tag: gorm:"type:varchar(2048)"
 
   image_info:
     type: object
@@ -2930,6 +2934,7 @@ definitions:
       - 'hostname-valid'
       - 'belongs-to-machine-cidr'
       - 'api-vip-connected'
+      - 'belongs-to-majority-group'
 
   dhcp_allocation_request:
     type: object
